--- a/index.html
+++ b/index.html
@@ -66,12 +66,37 @@
                     <p class="mt-3 mb-4">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
                 </div>
                 <div class="row gy-4 div-cards">
-                    <div class="col-lg-4 col-md-12">
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service">
+                            <h3>DESENVOLVIMENTO</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-pencil-fill"></i>
+                            </div>
+                            <p>Desenvolvemos o seu produto conforme a sua necessidades, respeitando o DNA da sua empresa.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service">
+                            <h3>IMPRESSÃO</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-droplet-fill"></i>
+                            </div>
+                            <p>No Silk-Screen conseguimos dar vida aos seus projetos. Tudo com a maior eficiência e qualidade.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service">
+                            <h3>ACABAMENTO</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-layers-fill"></i>
+                            </div>
+                            <p>Montamos e finalizamos todos os nossos produtos, de acordo com a necessita dos nossos clientes.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6">
                         <div class="service">
                             <h3>QUALIDADE</h3>
                             <div class="icon-box">
-                                <i class="bi bi-star-fill star1"></i>
-                                <i class="bi bi-star-fill star2"></i>
                                 <i class="bi bi-star-fill star3"></i>
                                 <i class="bi bi-star-fill star4"></i>
                                 <i class="bi bi-star-fill star5"></i>
@@ -79,17 +104,17 @@
                             <p>Desde a matéria-prima, equipamentos, processos, tudo é pensado para se ter alta qualidade nos produtos e serviços.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12">
+                    <div class="col-lg-4 col-md-6">
                         <div class="service">
                             <h3>EXPERIÊNCIA</h3>
                             <div class="icon-box">
                                 <i class="bi bi-people-fill"></i>
                                 <i class="bi bi-gear"></i>
                             </div>
-                            <p>Conte com nossa experiência de décadas em fornecer soluções adequadas para diversas necessidades e situações.</p>
+                            <p>Conte com nossa experiência de mais de 15 anos, em fornecer soluções adequadas para diversas necessidades e situações.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12">
+                    <div class="col-lg-4 col-md-6">
                         <div class="service">
                             <h3>ATENDIMENTO</h3>
                             <div class="icon-box">
@@ -103,91 +128,12 @@
         </div>
     </section>
     <!--FIM SECTION HOME SECUNDARIA-->
-    <!--iNICIO SECTION HOME PRODUTOS-->
-    <section class="secundaria-produtos overflow-hidden">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2 class="text-primary">NOSSOS PRODUTOS</h2>
-                    <p class="mt-3 mb-4 sub-title-produtos">Conheça mais sobre os nossos produtos </p>
-                </div>
-                <div class="row gy-4 mt-5">
-                    <div class="col-lg-6 col-md-6">
-                        <div class="produtos">
-                            <h3 class="display-6">Os Melhores Produtos</h3>
-                            <p>Somos especialista na fabricação de teclados de membrana, painéis em policarbonato, etiquetas técnicas e circuito flexível, atuando nos mais diversos seguimentos do mercado.</p>
-                        </div>
-                        <a class="btn btn-danger mt-3 mb-5" href="#">Saiba mais</a>
-                    </div>
-                    <div class="col-lg-6 col-md-12">
-                        <div class="container-carrosel">
-                            <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
-                                <div class="carousel-indicators">
-                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                                </div>
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <img src="./assets/img/slider/home-teclado-memb.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>First slide label</h5>
-                                            <p>Some representative placeholder content for the first slide.</p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/home-painel-frontal.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>Second slide label</h5>
-                                            <p>Some representative placeholder content for the second slide.</p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/home-circuito.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>Third slide label</h5>
-                                            <p>Some representative placeholder content for the third slide.</p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/home-etiq-tec.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>Third slide label</h5>
-                                            <p>Some representative placeholder content for the third slide.</p>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="./assets/img/slider/home-peca-tec.jpg" class="d-block w-100" alt="...">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <h5>Third slide label</h5>
-                                            <p>Some representative placeholder content for the third slide.</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
-                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Previous</span>
-                            </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
-                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                              <span class="visually-hidden">Next</span>
-                            </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!--FIM SECTION HOME SECUNDARIA-->
     <!--iNICIO CTA-->
     <div class="cta">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <h2 class="text-white">Conheça mais sobre nossos serviços.</h2>
+                    <h2 class="text-white">Conheça os nossos serviços.</h2>
                     <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
                 </div>
                 <div class="col-auto">
@@ -197,11 +143,67 @@
         </div>
     </div>
     <!--FIM CTA-->
-    <!--INICIO HOME PRODUTOS-->
-    <section class="produtos-home">
+    <!--iNICIO SECTION HOME PRODUTOS-->
+    <section class="secundaria-produtos ">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-primary">NOSSOS PRODUTOS</h2>
+                    <p class="mt-3 mb-4 sub-title-produtos">Conheça os nossos produtos </p>
+                </div>
+                <div class="row gy-4 mt-5">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="produtos">
+                            <h3 class="display-6">Os Melhores Produtos</h3>
+                            <p>Fabricamos teclados de membrana, painéis em policarbonato, etiquetas técnicas e circuito flexível nos mais diversos tipos de materiais.</p>
+                            <a class="btn btn-danger" href="#">Nossos produtos</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-12 mt-4 container-carrosel">
+                        <div class="produtos">
+                            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="10000">
+                                        <img src="./assets/img/slider/home-painel-frontal.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="2000">
+                                        <img src="./assets/img/slider/home-circuito.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
 
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/home-teclado-memb.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-    <!--FIM HOME PRODUTOS-->
+    <!--FIM SECTION HOME SECUNDARIA-->
+
+
 
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
