removendo img sem uso

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <li class="nav-item ">
                             <a class="nav-link " href="# ">Produtos</a>
                         </li>
-                        <li class="nav-item ">
-                            <a class="nav-link " href="# ">Sobre</a>
+                        <li class="nav-item mb-2">
+                            <a class="nav-link" href="# ">Sobre</a>
                         </li>
                     </ul>
                     <a class="btn-secondary-c" href="#">Contato</a>
@@ -90,7 +90,7 @@
                             <div class="icon-box">
                                 <i class="bi bi-layers-fill"></i>
                             </div>
-                            <p>Montamos e finalizamos todos os nossos produtos, de acordo com a necessita dos nossos clientes.</p>
+                            <p>Montamos e finalizamos todos os nossos produtos, de acordo com a necessidade dos nossos clientes.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6">
@@ -144,18 +144,18 @@
     </div>
     <!--FIM CTA-->
     <!--iNICIO SECTION HOME PRODUTOS-->
-    <section class="secundaria-produtos ">
+    <section class="secundaria-produtos">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <h2 class="text-primary">NOSSOS PRODUTOS</h2>
-                    <p class="mt-3 mb-4 sub-title-produtos">Conheça os nossos produtos </p>
+                    <p class="mt-3 mb-4 sub-title-produtos">Aqui você vai encontrar tudo o que precisa</p>
                 </div>
                 <div class="row gy-4 mt-5">
                     <div class="col-lg-6 col-md-12">
                         <div class="produtos">
-                            <h3 class="display-6">Os Melhores Produtos</h3>
-                            <p>Fabricamos teclados de membrana, painéis em policarbonato, etiquetas técnicas e circuito flexível nos mais diversos tipos de materiais.</p>
+                            <h3 class="display-6">Exelentes Produtos</h3>
+                            <p>Fabricamos teclados de membrana, painéis frontais e etiquetas silk e digital nos mais diversos tipos de materiais.</p>
                             <a class="btn btn-danger" href="#">Nossos produtos</a>
                         </div>
                     </div>
@@ -166,21 +166,28 @@
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="./assets/img/slider/home-painel-frontal.jpg" class="d-block w-100" alt="...">
+                                        <img src="./assets/img/slider/sld-1.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/sld-4.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+
+                                        </div>
+                                    </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="./assets/img/slider/home-circuito.jpg" class="d-block w-100" alt="...">
+                                        <img src="./assets/img/slider/sld-2.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
 
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="./assets/img/slider/home-teclado-memb.jpg" class="d-block w-100" alt="...">
+                                        <img src="./assets/img/slider/sld-3.jpg" class="d-block w-100" alt="...">
                                         <div class="carousel-caption d-none d-md-block">
 
                                         </div>
@@ -202,9 +209,6 @@
         </div>
     </section>
     <!--FIM SECTION HOME SECUNDARIA-->
-
-
-
     <!--INICIO FOOTER-->
     <footer class="footer text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
@@ -218,7 +222,7 @@
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="text-center">Somos especialista em Silk-Screen de Painéis Frontais, Etiquetas Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                    <p class="text-center">Somos especialista em impressão Serigráfica e Silk-Screen, na fabicação de Painéis Frontais, Etiquetas, Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
@@ -226,7 +230,10 @@
                         <a class="text-white " style="text-decoration: none; " href="# ">Teclados de Membrana</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Paineis Frontais</a>
+                    </p>
+                    <p>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas Técnicas</a>
                     </p>
                     <p>
                         <a class="text-white " style="text-decoration: none; " href="# ">Adesivos</a>
@@ -236,12 +243,12 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp"></i>&nbsp;&nbsp;(11) 94830-7817
+                            <i class="bi bi-whatsapp"></i>&nbsp;&nbsp;(11) 96258-4708
                         </p>
                     </a>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-envelope"></i>&nbsp;&nbsp;danny83910@gmail.com
+                            <i class="bi bi-envelope"></i>&nbsp;&nbsp;dmdmembranas@gmail.com
                         </p>
                     </a>
                 </div>
