--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="col-lg-6 col-md-12">
                         <div class="produtos">
                             <h3 class="display-6">Exelentes Produtos</h3>
-                            <p>Fabricamos teclados de membrana, painéis frontais e etiquetas silk e digital nos mais diversos tipos de materiais.</p>
+                            <p>Fabricamos teclados de membrana, painéis frontais, etiquetas silk e digital nos mais diversos tipos de materiais.</p>
                             <a class="btn btn-danger" href="#">Nossos produtos</a>
                         </div>
                     </div>
@@ -233,10 +233,10 @@
                         <a class="text-white " style="text-decoration: none; " href="# ">Paineis Frontais</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas Técnicas</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Etiquetas</a>
                     </p>
                     <p>
-                        <a class="text-white " style="text-decoration: none; " href="# ">Adesivos</a>
+                        <a class="text-white " style="text-decoration: none; " href="# ">Telas</a>
                     </p>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
@@ -248,7 +248,7 @@
                     </a>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-envelope"></i>&nbsp;&nbsp;dmdmembranas@gmail.com
+                            <i class="bi bi-envelope"></i>&nbsp;dmdmembranas@gmail.com
                         </p>
                     </a>
                 </div>
