ajusutes nos links do footer

--- a/index.html
+++ b/index.html
@@ -243,13 +243,12 @@
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp">&nbsp;(11) 96258-4708</i>
+                            <i class="bi bi-whatsapp"></i><span> (11) 96258-4708</span>
                         </p>
                     </a>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-envelope">&nbsp;dmdmembranas@gmail.com</i>
-
+                            <i class="bi bi-envelope ml-2"></i><span> dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
