--- a/index.html
+++ b/index.html
@@ -239,16 +239,16 @@
                         <a class="text-white " style="text-decoration: none; " href="# ">Telas</a>
                     </p>
                 </div>
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 contato">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="#">
                         <p class="text-white">
-                            <i class="bi bi-whatsapp"></i><span> (11) 96258-4708</span>
+                            <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
                     <a href="#">
-                        <p class="text-white">
-                            <i class="bi bi-envelope ml-2"></i><span> dmdmembranas@gmail.com</span>
+                        <p class="text-white p-mail">
+                            <i class="bi bi-envelope">&nbsp;</i><span class="email"> dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
