--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
-                            <a class="nav-link" href="# ">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="# ">Serviços</a>
+                            <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="# ">Produtos</a>
+                            <a class="nav-link " href="produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item mb-2">
-                            <a class="nav-link" href="# ">Sobre</a>
+                            <a class="nav-link" href="sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="#">Contato</a>
+                    <a class="btn-secondary-c" href="contato.html">Contato</a>
                 </div>
             </div>
         </nav>
