--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -11,52 +11,51 @@
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
 </head>
 
 <body>
-    <header class="header">
+    <header class="header header-servicos">
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img class="logo " src="./assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img class="logo" src="../assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
-                            <a class="nav-link" href="index.html">Home</a>
+                            <a class="nav-link" href="../index.html">Home</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./pages/servicos.html">Serviços</a>
+                            <a class="nav-link " href="servicos.html">Serviços</a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link " href="./pages/produtos.html">Produtos</a>
+                            <a class="nav-link " href="./produtos.html">Produtos</a>
                         </li>
                         <li class="nav-item mb-2">
-                            <a class="nav-link" href="./pages/sobre.html">Sobre</a>
+                            <a class="nav-link" href="./sobre.html">Sobre</a>
                         </li>
                     </ul>
-                    <a class="btn-secondary-c" href="./pages/contato.html">Contato</a>
+                    <a class="btn-secondary-c" href="./contato.html">Contato</a>
                 </div>
             </div>
         </nav>
     </header>
     <!--FIM NAVBAR-->
-    <!--INICIO SECTION HOME INICIAL-->
-    <section class="inicial-home d-flex align-items-center overflow-hidden">
+    <!--INICIO SECTION SERVIÇOS INICIAL-->
+    <section class="inicial-servicos d-flex align-items-center overflow-hidden">
         <div class="container container-top">
             <div class="row">
-                <div class="col-lg-7 mx-auto text-center container-content">
-                    <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
+                <div class="col-lg-7 mx-auto text-center container-content-servicos">
+                    <h1 class="display-4 text-white mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
                     <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
-                    <a class="btn btn-secondary" href="#">Conheça os nossos serviços</a>
                 </div>
             </div>
         </div>
     </section>
-    <!--FIM SECTION HOME INICIAL-->
+    <!--FIM SECTION SERVIÇOS INICIAL-->
     <!--iNICIO SECTION HOME SECUNDARIA-->
     <section class="secundaria-home overflow-hidden">
         <div class="container">
