--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -21,7 +21,7 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img class="logo" src="../assets/img/logo.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img id="logo-person" src="../assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
