teste imagem serviço

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -16,7 +16,7 @@
     <title>DMD - Teclados de membrana</title>
 </head>
 
-<body>
+<body id="servicos">
     <header class="header header-servicos">
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
@@ -49,98 +49,50 @@
         <div class="container container-top">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content-servicos">
-                    <h1 class="display-4 text-white mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
-                    <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
+                    <h2 class="display-4 text-white">NOSSOS SERVIÇOS</h2>
                 </div>
             </div>
         </div>
     </section>
     <!--FIM SECTION SERVIÇOS INICIAL-->
-    <!--iNICIO SECTION HOME SECUNDARIA-->
-    <section class="secundaria-home overflow-hidden">
-        <div class="container">
+    <!--iNICIO SECTION SERVIÇOS SECUNDARIA-->
+    <section id="section-servicos" class="secundaria-home overflow-hidden">
+        <div class="container container-servicos">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-primary">PODEMOS AJUDAR</h2>
-                    <p class="mt-3 mb-4">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
+                    <h2 class="text-primary">SOLUÇOES</h2>
+                    <p class="mt-3 mb-4">Oferecemos um grande leque de serviços para atender as necessidades de nossos clientes. Com produtos de alta qualidade e profissionais qualificados, podemos oferecer soluções personalizadas e de qualidade.</p>
                 </div>
-                <div class="row gy-4 div-cards">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>DESENVOLVIMENTO</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-pencil-fill"></i>
-                            </div>
-                            <p>Desenvolvemos o seu produto conforme a sua necessidades, respeitando o DNA da sua empresa.</p>
+            </div>
+            <div class="row mt-5">
+                <div class="col-lg-6 col-md-12">
+                    <div class="servicos-content">
+                        <h3 class="display-6">Podemos lhe oferecer</h3>
+                        <hr>
+                        <p>Oferecemos serviços especializados de grande qualidade, assim produzimos soluções diversificadas para sua empresa e seus projetos.</p>
+                        <div class="topicos">
+                            <span>DESENVOLVIMENTO</span>
+                            <span>SILK-SCREEN</span>
+                            <span>ACABAMENTO</span>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>IMPRESSÃO</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-droplet-fill"></i>
-                            </div>
-                            <p>No Silk-Screen conseguimos dar vida aos seus projetos. Tudo com a maior eficiência e qualidade.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>ACABAMENTO</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-layers-fill"></i>
-                            </div>
-                            <p>Montamos e finalizamos todos os nossos produtos, de acordo com a necessidade dos nossos clientes.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>QUALIDADE</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-star-fill star3"></i>
-                                <i class="bi bi-star-fill star4"></i>
-                                <i class="bi bi-star-fill star5"></i>
-                            </div>
-                            <p>Desde a matéria-prima, equipamentos, processos, tudo é pensado para se ter alta qualidade nos produtos e serviços.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>EXPERIÊNCIA</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-people-fill"></i>
-                                <i class="bi bi-gear"></i>
-                            </div>
-                            <p>Conte com nossa experiência de mais de 15 anos, em fornecer soluções adequadas para diversas necessidades e situações.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service">
-                            <h3>ATENDIMENTO</h3>
-                            <div class="icon-box">
-                                <i class="bi bi-person-check-fill"></i>
-                            </div>
-                            <p>Prestamos atendimento personalizado para nossos clientes buscando compreender suas necessidades.</p>
-                        </div>
+                </div>
+                <div class="col-lg-6 col-md-12">
+                    <div class="servicos-content-img">
+                        <p>Todas as fases do seu produto em um só lugar</p>
+                        <img src="../assets/img/png/servicos-3.png" alt="img serviços">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!--FIM SECTION HOME SECUNDARIA-->
-    <!--iNICIO CTA-->
-    <div class="cta">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <h2 class="text-white">Conheça os nossos serviços.</h2>
-                    <p class="text-white">Confira tudo o que podemos lhe oferecer!</p>
-                </div>
-                <div class="col-auto">
-                    <a href="#" class="btn btn-cta mt-4">Saiba Mais</a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--FIM SECTION SERVIÇOS SECUNDARIA-->
+
+    <!--FIM CTA-->
+    <!--FIM CTA-->
+    <!--FIM CTA-->
+    <!--FIM CTA-->
+    <!--FIM CTA-->
     <!--FIM CTA-->
     <!--iNICIO SECTION HOME PRODUTOS-->
     <section class="secundaria-produtos">
